R240_Programming_Language_Translation/2021Feb/test/parser.output
Nonterminals useless in grammar

    duzina


Terminals unused in grammar

    '|'


Rules useless in grammar

   27 duzina: '|' izraz '|'


Grammar

    0 $accept: program $end

    1 program: naredba '\n' program
    2        | naredba '\n'
    3        | '\n'

    4 naredba: ID DODELA definicija
    5        | PRINT_T '(' izraz ')'
    6        | PRINT_T '(' definicija ')'
    7        | ID DODELA izraz
    8        | ID DODELA LIST_T '(' lista ')'
    9        | '\n'

   10 definicija: DEF_T '(' izraz ',' izraz ')'

   11 izraz: izraz '+' izraz
   12      | izraz '-' izraz
   13      | '-' izraz
   14      | '(' izraz ')'
   15      | BROJ '*' izraz
   16      | izraz '*' BROJ
   17      | REFX_T '(' izraz ')'
   18      | REFY_T '(' izraz ')'
   19      | SIM_T '(' izraz ')'
   20      | ROT_T '(' izraz ',' ugao ')'
   21      | ID
   22      | '<' BROJ ',' BROJ '>'

   23 ugao: ANGLE_T '(' izraz ',' izraz ')'

   24 lista: elementi

   25 elementi: elementi ',' izraz
   26         | izraz


Terminals, with rules where they appear

    $end (0) 0
    '\n' (10) 1 2 3 9
    '(' (40) 5 6 8 10 14 17 18 19 20 23
    ')' (41) 5 6 8 10 14 17 18 19 20 23
    '*' (42) 15 16
    '+' (43) 11
    ',' (44) 10 20 22 23 25
    '-' (45) 12 13
    '<' (60) 22
    '>' (62) 22
    '|' (124)
    error (256)
    UMINUS (258)
    DEF_T (259) 10
    PRINT_T (260) 5 6
    DODELA (261) 4 7 8
    REFX_T (262) 17
    REFY_T (263) 18
    SIM_T (264) 19
    ANGLE_T (265) 23
    ROT_T (266) 20
    LIST_T (267) 8
    BROJ <v> (268) 15 16 22
    ID <ime> (269) 4 7 8 21


Nonterminals, with rules where they appear

    $accept (25)
        on left: 0
    program (26)
        on left: 1 2 3
        on right: 0 1
    naredba (27)
        on left: 4 5 6 7 8 9
        on right: 1 2
    definicija <vek> (28)
        on left: 10
        on right: 4 6
    izraz <vek> (29)
        on left: 11 12 13 14 15 16 17 18 19 20 21 22
        on right: 5 7 10 11 12 13 14 15 16 17 18 19 20 23 25 26
    ugao (30)
        on left: 23
        on right: 20
    lista <vector<vek>> (31)
        on left: 24
        on right: 8
    elementi <vector<vek>> (32)
        on left: 25 26
        on right: 24 25


State 0

    0 $accept: . program $end

    PRINT_T  shift, and go to state 1
    ID       shift, and go to state 2
    '\n'     shift, and go to state 3

    program  go to state 4
    naredba  go to state 5


State 1

    5 naredba: PRINT_T . '(' izraz ')'
    6        | PRINT_T . '(' definicija ')'

    '('  shift, and go to state 6


State 2

    4 naredba: ID . DODELA definicija
    7        | ID . DODELA izraz
    8        | ID . DODELA LIST_T '(' lista ')'

    DODELA  shift, and go to state 7


State 3

    3 program: '\n' .
    9 naredba: '\n' .

    '\n'      reduce using rule 9 (naredba)
    $default  reduce using rule 3 (program)


State 4

    0 $accept: program . $end

    $end  shift, and go to state 8


State 5

    1 program: naredba . '\n' program
    2        | naredba . '\n'

    '\n'  shift, and go to state 9


State 6

    5 naredba: PRINT_T '(' . izraz ')'
    6        | PRINT_T '(' . definicija ')'

    '-'     shift, and go to state 10
    DEF_T   shift, and go to state 11
    REFX_T  shift, and go to state 12
    REFY_T  shift, and go to state 13
    SIM_T   shift, and go to state 14
    ROT_T   shift, and go to state 15
    BROJ    shift, and go to state 16
    ID      shift, and go to state 17
    '('     shift, and go to state 18
    '<'     shift, and go to state 19

    definicija  go to state 20
    izraz       go to state 21


State 7

    4 naredba: ID DODELA . definicija
    7        | ID DODELA . izraz
    8        | ID DODELA . LIST_T '(' lista ')'

    '-'     shift, and go to state 10
    DEF_T   shift, and go to state 11
    REFX_T  shift, and go to state 12
    REFY_T  shift, and go to state 13
    SIM_T   shift, and go to state 14
    ROT_T   shift, and go to state 15
    LIST_T  shift, and go to state 22
    BROJ    shift, and go to state 16
    ID      shift, and go to state 17
    '('     shift, and go to state 18
    '<'     shift, and go to state 19

    definicija  go to state 23
    izraz       go to state 24


State 8

    0 $accept: program $end .

    $default  accept


State 9

    1 program: naredba '\n' . program
    2        | naredba '\n' .

    PRINT_T  shift, and go to state 1
    ID       shift, and go to state 2
    '\n'     shift, and go to state 3

    $default  reduce using rule 2 (program)

    program  go to state 25
    naredba  go to state 5


State 10

   13 izraz: '-' . izraz

    '-'     shift, and go to state 10
    REFX_T  shift, and go to state 12
    REFY_T  shift, and go to state 13
    SIM_T   shift, and go to state 14
    ROT_T   shift, and go to state 15
    BROJ    shift, and go to state 16
    ID      shift, and go to state 17
    '('     shift, and go to state 18
    '<'     shift, and go to state 19

    izraz  go to state 26


State 11

   10 definicija: DEF_T . '(' izraz ',' izraz ')'

    '('  shift, and go to state 27


State 12

   17 izraz: REFX_T . '(' izraz ')'

    '('  shift, and go to state 28


State 13

   18 izraz: REFY_T . '(' izraz ')'

    '('  shift, and go to state 29


State 14

   19 izraz: SIM_T . '(' izraz ')'

    '('  shift, and go to state 30


State 15

   20 izraz: ROT_T . '(' izraz ',' ugao ')'

    '('  shift, and go to state 31


State 16

   15 izraz: BROJ . '*' izraz

    '*'  shift, and go to state 32


State 17

   21 izraz: ID .

    $default  reduce using rule 21 (izraz)


State 18

   14 izraz: '(' . izraz ')'

    '-'     shift, and go to state 10
    REFX_T  shift, and go to state 12
    REFY_T  shift, and go to state 13
    SIM_T   shift, and go to state 14
    ROT_T   shift, and go to state 15
    BROJ    shift, and go to state 16
    ID      shift, and go to state 17
    '('     shift, and go to state 18
    '<'     shift, and go to state 19

    izraz  go to state 33


State 19

   22 izraz: '<' . BROJ ',' BROJ '>'

    BROJ  shift, and go to state 34


State 20

    6 naredba: PRINT_T '(' definicija . ')'

    ')'  shift, and go to state 35


State 21

    5 naredba: PRINT_T '(' izraz . ')'
   11 izraz: izraz . '+' izraz
   12      | izraz . '-' izraz
   16      | izraz . '*' BROJ

    '-'  shift, and go to state 36
    '+'  shift, and go to state 37
    '*'  shift, and go to state 38
    ')'  shift, and go to state 39


State 22

    8 naredba: ID DODELA LIST_T . '(' lista ')'

    '('  shift, and go to state 40


State 23

    4 naredba: ID DODELA definicija .

    $default  reduce using rule 4 (naredba)


State 24

    7 naredba: ID DODELA izraz .
   11 izraz: izraz . '+' izraz
   12      | izraz . '-' izraz
   16      | izraz . '*' BROJ

    '-'  shift, and go to state 36
    '+'  shift, and go to state 37
    '*'  shift, and go to state 38

    $default  reduce using rule 7 (naredba)


State 25

    1 program: naredba '\n' program .

    $default  reduce using rule 1 (program)


State 26

   11 izraz: izraz . '+' izraz
   12      | izraz . '-' izraz
   13      | '-' izraz .
   16      | izraz . '*' BROJ

    $default  reduce using rule 13 (izraz)


State 27

   10 definicija: DEF_T '(' . izraz ',' izraz ')'

    '-'     shift, and go to state 10
    REFX_T  shift, and go to state 12
    REFY_T  shift, and go to state 13
    SIM_T   shift, and go to state 14
    ROT_T   shift, and go to state 15
    BROJ    shift, and go to state 16
    ID      shift, and go to state 17
    '('     shift, and go to state 18
    '<'     shift, and go to state 19

    izraz  go to state 41


State 28

   17 izraz: REFX_T '(' . izraz ')'

    '-'     shift, and go to state 10
    REFX_T  shift, and go to state 12
    REFY_T  shift, and go to state 13
    SIM_T   shift, and go to state 14
    ROT_T   shift, and go to state 15
    BROJ    shift, and go to state 16
    ID      shift, and go to state 17
    '('     shift, and go to state 18
    '<'     shift, and go to state 19

    izraz  go to state 42


State 29

   18 izraz: REFY_T '(' . izraz ')'

    '-'     shift, and go to state 10
    REFX_T  shift, and go to state 12
    REFY_T  shift, and go to state 13
    SIM_T   shift, and go to state 14
    ROT_T   shift, and go to state 15
    BROJ    shift, and go to state 16
    ID      shift, and go to state 17
    '('     shift, and go to state 18
    '<'     shift, and go to state 19

    izraz  go to state 43


State 30

   19 izraz: SIM_T '(' . izraz ')'

    '-'     shift, and go to state 10
    REFX_T  shift, and go to state 12
    REFY_T  shift, and go to state 13
    SIM_T   shift, and go to state 14
    ROT_T   shift, and go to state 15
    BROJ    shift, and go to state 16
    ID      shift, and go to state 17
    '('     shift, and go to state 18
    '<'     shift, and go to state 19

    izraz  go to state 44


State 31

   20 izraz: ROT_T '(' . izraz ',' ugao ')'

    '-'     shift, and go to state 10
    REFX_T  shift, and go to state 12
    REFY_T  shift, and go to state 13
    SIM_T   shift, and go to state 14
    ROT_T   shift, and go to state 15
    BROJ    shift, and go to state 16
    ID      shift, and go to state 17
    '('     shift, and go to state 18
    '<'     shift, and go to state 19

    izraz  go to state 45


State 32

   15 izraz: BROJ '*' . izraz

    '-'     shift, and go to state 10
    REFX_T  shift, and go to state 12
    REFY_T  shift, and go to state 13
    SIM_T   shift, and go to state 14
    ROT_T   shift, and go to state 15
    BROJ    shift, and go to state 16
    ID      shift, and go to state 17
    '('     shift, and go to state 18
    '<'     shift, and go to state 19

    izraz  go to state 46


State 33

   11 izraz: izraz . '+' izraz
   12      | izraz . '-' izraz
   14      | '(' izraz . ')'
   16      | izraz . '*' BROJ

    '-'  shift, and go to state 36
    '+'  shift, and go to state 37
    '*'  shift, and go to state 38
    ')'  shift, and go to state 47


State 34

   22 izraz: '<' BROJ . ',' BROJ '>'

    ','  shift, and go to state 48


State 35

    6 naredba: PRINT_T '(' definicija ')' .

    $default  reduce using rule 6 (naredba)


State 36

   12 izraz: izraz '-' . izraz

    '-'     shift, and go to state 10
    REFX_T  shift, and go to state 12
    REFY_T  shift, and go to state 13
    SIM_T   shift, and go to state 14
    ROT_T   shift, and go to state 15
    BROJ    shift, and go to state 16
    ID      shift, and go to state 17
    '('     shift, and go to state 18
    '<'     shift, and go to state 19

    izraz  go to state 49


State 37

   11 izraz: izraz '+' . izraz

    '-'     shift, and go to state 10
    REFX_T  shift, and go to state 12
    REFY_T  shift, and go to state 13
    SIM_T   shift, and go to state 14
    ROT_T   shift, and go to state 15
    BROJ    shift, and go to state 16
    ID      shift, and go to state 17
    '('     shift, and go to state 18
    '<'     shift, and go to state 19

    izraz  go to state 50


State 38

   16 izraz: izraz '*' . BROJ

    BROJ  shift, and go to state 51


State 39

    5 naredba: PRINT_T '(' izraz ')' .

    $default  reduce using rule 5 (naredba)


State 40

    8 naredba: ID DODELA LIST_T '(' . lista ')'

    '-'     shift, and go to state 10
    REFX_T  shift, and go to state 12
    REFY_T  shift, and go to state 13
    SIM_T   shift, and go to state 14
    ROT_T   shift, and go to state 15
    BROJ    shift, and go to state 16
    ID      shift, and go to state 17
    '('     shift, and go to state 18
    '<'     shift, and go to state 19

    izraz     go to state 52
    lista     go to state 53
    elementi  go to state 54


State 41

   10 definicija: DEF_T '(' izraz . ',' izraz ')'
   11 izraz: izraz . '+' izraz
   12      | izraz . '-' izraz
   16      | izraz . '*' BROJ

    '-'  shift, and go to state 36
    '+'  shift, and go to state 37
    '*'  shift, and go to state 38
    ','  shift, and go to state 55


State 42

   11 izraz: izraz . '+' izraz
   12      | izraz . '-' izraz
   16      | izraz . '*' BROJ
   17      | REFX_T '(' izraz . ')'

    '-'  shift, and go to state 36
    '+'  shift, and go to state 37
    '*'  shift, and go to state 38
    ')'  shift, and go to state 56


State 43

   11 izraz: izraz . '+' izraz
   12      | izraz . '-' izraz
   16      | izraz . '*' BROJ
   18      | REFY_T '(' izraz . ')'

    '-'  shift, and go to state 36
    '+'  shift, and go to state 37
    '*'  shift, and go to state 38
    ')'  shift, and go to state 57


State 44

   11 izraz: izraz . '+' izraz
   12      | izraz . '-' izraz
   16      | izraz . '*' BROJ
   19      | SIM_T '(' izraz . ')'

    '-'  shift, and go to state 36
    '+'  shift, and go to state 37
    '*'  shift, and go to state 38
    ')'  shift, and go to state 58


State 45

   11 izraz: izraz . '+' izraz
   12      | izraz . '-' izraz
   16      | izraz . '*' BROJ
   20      | ROT_T '(' izraz . ',' ugao ')'

    '-'  shift, and go to state 36
    '+'  shift, and go to state 37
    '*'  shift, and go to state 38
    ','  shift, and go to state 59


State 46

   11 izraz: izraz . '+' izraz
   12      | izraz . '-' izraz
   15      | BROJ '*' izraz .
   16      | izraz . '*' BROJ

    $default  reduce using rule 15 (izraz)


State 47

   14 izraz: '(' izraz ')' .

    $default  reduce using rule 14 (izraz)


State 48

   22 izraz: '<' BROJ ',' . BROJ '>'

    BROJ  shift, and go to state 60


State 49

   11 izraz: izraz . '+' izraz
   12      | izraz . '-' izraz
   12      | izraz '-' izraz .
   16      | izraz . '*' BROJ

    '*'  shift, and go to state 38

    $default  reduce using rule 12 (izraz)


State 50

   11 izraz: izraz . '+' izraz
   11      | izraz '+' izraz .
   12      | izraz . '-' izraz
   16      | izraz . '*' BROJ

    '*'  shift, and go to state 38

    $default  reduce using rule 11 (izraz)


State 51

   16 izraz: izraz '*' BROJ .

    $default  reduce using rule 16 (izraz)


State 52

   11 izraz: izraz . '+' izraz
   12      | izraz . '-' izraz
   16      | izraz . '*' BROJ
   26 elementi: izraz .

    '-'  shift, and go to state 36
    '+'  shift, and go to state 37
    '*'  shift, and go to state 38

    $default  reduce using rule 26 (elementi)


State 53

    8 naredba: ID DODELA LIST_T '(' lista . ')'

    ')'  shift, and go to state 61


State 54

   24 lista: elementi .
   25 elementi: elementi . ',' izraz

    ','  shift, and go to state 62

    $default  reduce using rule 24 (lista)


State 55

   10 definicija: DEF_T '(' izraz ',' . izraz ')'

    '-'     shift, and go to state 10
    REFX_T  shift, and go to state 12
    REFY_T  shift, and go to state 13
    SIM_T   shift, and go to state 14
    ROT_T   shift, and go to state 15
    BROJ    shift, and go to state 16
    ID      shift, and go to state 17
    '('     shift, and go to state 18
    '<'     shift, and go to state 19

    izraz  go to state 63


State 56

   17 izraz: REFX_T '(' izraz ')' .

    $default  reduce using rule 17 (izraz)


State 57

   18 izraz: REFY_T '(' izraz ')' .

    $default  reduce using rule 18 (izraz)


State 58

   19 izraz: SIM_T '(' izraz ')' .

    $default  reduce using rule 19 (izraz)


State 59

   20 izraz: ROT_T '(' izraz ',' . ugao ')'

    ANGLE_T  shift, and go to state 64

    ugao  go to state 65


State 60

   22 izraz: '<' BROJ ',' BROJ . '>'

    '>'  shift, and go to state 66


State 61

    8 naredba: ID DODELA LIST_T '(' lista ')' .

    $default  reduce using rule 8 (naredba)


State 62

   25 elementi: elementi ',' . izraz

    '-'     shift, and go to state 10
    REFX_T  shift, and go to state 12
    REFY_T  shift, and go to state 13
    SIM_T   shift, and go to state 14
    ROT_T   shift, and go to state 15
    BROJ    shift, and go to state 16
    ID      shift, and go to state 17
    '('     shift, and go to state 18
    '<'     shift, and go to state 19

    izraz  go to state 67


State 63

   10 definicija: DEF_T '(' izraz ',' izraz . ')'
   11 izraz: izraz . '+' izraz
   12      | izraz . '-' izraz
   16      | izraz . '*' BROJ

    '-'  shift, and go to state 36
    '+'  shift, and go to state 37
    '*'  shift, and go to state 38
    ')'  shift, and go to state 68


State 64

   23 ugao: ANGLE_T . '(' izraz ',' izraz ')'

    '('  shift, and go to state 69


State 65

   20 izraz: ROT_T '(' izraz ',' ugao . ')'

    ')'  shift, and go to state 70


State 66

   22 izraz: '<' BROJ ',' BROJ '>' .

    $default  reduce using rule 22 (izraz)


State 67

   11 izraz: izraz . '+' izraz
   12      | izraz . '-' izraz
   16      | izraz . '*' BROJ
   25 elementi: elementi ',' izraz .

    '-'  shift, and go to state 36
    '+'  shift, and go to state 37
    '*'  shift, and go to state 38

    $default  reduce using rule 25 (elementi)


State 68

   10 definicija: DEF_T '(' izraz ',' izraz ')' .

    $default  reduce using rule 10 (definicija)


State 69

   23 ugao: ANGLE_T '(' . izraz ',' izraz ')'

    '-'     shift, and go to state 10
    REFX_T  shift, and go to state 12
    REFY_T  shift, and go to state 13
    SIM_T   shift, and go to state 14
    ROT_T   shift, and go to state 15
    BROJ    shift, and go to state 16
    ID      shift, and go to state 17
    '('     shift, and go to state 18
    '<'     shift, and go to state 19

    izraz  go to state 71


State 70

   20 izraz: ROT_T '(' izraz ',' ugao ')' .

    $default  reduce using rule 20 (izraz)


State 71

   11 izraz: izraz . '+' izraz
   12      | izraz . '-' izraz
   16      | izraz . '*' BROJ
   23 ugao: ANGLE_T '(' izraz . ',' izraz ')'

    '-'  shift, and go to state 36
    '+'  shift, and go to state 37
    '*'  shift, and go to state 38
    ','  shift, and go to state 72


State 72

   23 ugao: ANGLE_T '(' izraz ',' . izraz ')'

    '-'     shift, and go to state 10
    REFX_T  shift, and go to state 12
    REFY_T  shift, and go to state 13
    SIM_T   shift, and go to state 14
    ROT_T   shift, and go to state 15
    BROJ    shift, and go to state 16
    ID      shift, and go to state 17
    '('     shift, and go to state 18
    '<'     shift, and go to state 19

    izraz  go to state 73


State 73

   11 izraz: izraz . '+' izraz
   12      | izraz . '-' izraz
   16      | izraz . '*' BROJ
   23 ugao: ANGLE_T '(' izraz ',' izraz . ')'

    '-'  shift, and go to state 36
    '+'  shift, and go to state 37
    '*'  shift, and go to state 38
    ')'  shift, and go to state 74


State 74

   23 ugao: ANGLE_T '(' izraz ',' izraz ')' .

    $default  reduce using rule 23 (ugao)
